tests/ui/mixed_indent_same_line.stderr
error: Mixed spaces and tabs on same line: " \tmixed"
 --> tests/ui/mixed_indent_same_line.rs:5:21
  |
5 |     let _ = dedent!(" \tmixed");
  |                     ^^^^^^^^^^
