tests/ui/mixed_indent_same_line.rs
use inline_text::dedent;


fn main() {
    let _ = dedent!(" \tmixed");
}
